--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do App</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h1>To-Do List</h1>
-        <div class="task-input">
-            <input type="text" id="task" placeholder="Add a new task...">
-            <input type="datetime-local" id="task-time">
-            <button onclick="addTask()">Add</button>
+        <div class="input-area">
+            <input type="text" id="taskInput" placeholder="Add a new task...">
+            <input type="datetime-local" id="taskDate">
+            <button id="addTask">Add Task</button>
         </div>
-        <ul id="task-list"></ul>
+        <ul id="taskList"></ul>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
